Update CI.yaml se cambia el nombre de la imagen

--- a/.github/worflows/CI.yaml
+++ b/.github/worflows/CI.yaml
@@ -36,7 +36,7 @@ jobs:
         uses: ./.github/actions/deploy
         with:
           acr_name: ${{ secrets.ACR_NAME }}
-          image_name: "myapp"
+          image_name: "myapp-frontend"
           image_tag: "4.0.0"
           arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
           arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
