--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -22,15 +22,15 @@ jobs:
       #   id: show_version
       #   run: echo "La versión es: ${{ steps.extract_version.outputs.version }}"
 
-      - name: Build and Push Docker Image
-        uses: ./.github/actions/upload_image
-        with:
-          acr_name: ${{ secrets.ACR_NAME }}
-          image_name: "myapp-frontend"
-          image_tag: "4.0.0"
-          arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
-          arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
-          arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
+      # - name: Build and Push Docker Image
+      #   uses: ./.github/actions/upload_image
+      #   with:
+      #     acr_name: ${{ secrets.ACR_NAME }}
+      #     image_name: "myapp-frontend"
+      #     image_tag: "4.0.0"
+      #     arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
+      #     arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
+      #     arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
 
       - name: Upload an image 
         uses: ./.github/actions/deploy
