--- a/.github/actions/deploy/action.yaml
+++ b/.github/actions/deploy/action.yaml
@@ -73,8 +73,8 @@ runs:
       shell: bash
     - name: Delete Helm
       run: |
-        kubectl delete svc backend-service -n default
-        kubectl delete deploy backend-app -n default
+        kubectl delete svc frontend-service -n default
+        kubectl delete deploy frontend-app -n default
       shell: bash
 
     - name: Deploy with Helm
