se añade el uso del secreto al deploy

--- a/manifests/frontend/templates/front-deploy.yaml
+++ b/manifests/frontend/templates/front-deploy.yaml
@@ -16,4 +16,7 @@ spec:
       - name: frontend-app
         image: "{{ .Values.image.repository}}/{{ .Values.image.tag}}"
         ports:
-        - containerPort: 80  
+        - containerPort: 80
+      imagePullSecrets:
+      - name: acr-secret   # Aquí agregamos la referencia al secreto
+
