--- a/.github/actions/deploy/action.yaml
+++ b/.github/actions/deploy/action.yaml
@@ -71,12 +71,12 @@ runs:
       run: |
         curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
       shell: bash
-    - name: Delete Helm
-      run: |
-        kubectl delete secret acr-secret -n default
-        kubectl delete svc frontend-service -n default
-        kubectl delete deploy frontend-app -n default
-      shell: bash
+    # - name: Delete Helm
+    #   run: |
+    #     kubectl delete svc backend-service -n default
+    #     kubectl delete deploy backend-app -n default
+    #     kubectl delete secret acr-secret -n default
+    #   shell: bash
 
     - name: Deploy with Helm
       run: |
