--- a/manifests/frontend/templates/front-deploy.yaml
+++ b/manifests/frontend/templates/front-deploy.yaml
@@ -17,6 +17,6 @@ spec:
         image: "{{ .Values.image.repository}}/{{ .Values.image.tag}}"
         ports:
         - containerPort: 80
-      imagePullSecrets:
-      - name: acr-secret   # Aquí agregamos la referencia al secreto
+      # imagePullSecrets:
+      # - name: acr-secret
 
