--- a/manifests/frontend/templates/secret.yaml
+++ b/manifests/frontend/templates/secret.yaml
@@ -1,7 +1,7 @@
-apiVersion: v1
-kind: Secret
-metadata:
-  name: acr-secret
-type: kubernetes.io/dockerconfigjson
-data:
-  .dockerconfigjson: {{ .Values.acr.dockerconfigjson | quote }}
+# apiVersion: v1
+# kind: Secret
+# metadata:
+#   name: acr-secret
+# type: kubernetes.io/dockerconfigjson
+# data:
+#   .dockerconfigjson: {{ .Values.acr.dockerconfigjson | quote }}
