--- a/manifests/frontend/values.yaml
+++ b/manifests/frontend/values.yaml
@@ -5,8 +5,8 @@
 # This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
 replicaCount: 1
 image:
-  repository: ""
-  tag: ""
+  repository: "jrochadev/mi-nginx-vue-app"
+  tag: "latest"
   pullSecret: ""
 database:
   SPRING_DB_HOST: ""
