Update action.yaml se comentan las opciones de el helm

--- a/.github/actions/deploy/action.yaml
+++ b/.github/actions/deploy/action.yaml
@@ -82,8 +82,8 @@ runs:
       run: |
         helm upgrade --install ${GITHUB_SHA} ./manifests/frontend \
         --namespace default \
-        --set "image.repository=${{ inputs.acr_name }}.azurecr.io/${{ inputs.image_name }}" \
-        --set "image.tag=${{ inputs.image_tag }}" \
-        --set "image.pullSecret=${{ inputs.acr_secret_name }}" \
-        --set "acr.dockerconfigjson=${{ inputs.acr_secret_name }}" \
+        # --set "image.repository=${{ inputs.acr_name }}.azurecr.io/${{ inputs.image_name }}" \
+        # --set "image.tag=${{ inputs.image_tag }}" \
+        # --set "image.pullSecret=${{ inputs.acr_secret_name }}" \
+        # --set "acr.dockerconfigjson=${{ inputs.acr_secret_name }}" \
       shell: bash
