--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -44,5 +44,8 @@ jobs:
           aks_resource_group: ${{ secrets.RESOURCE_GROUP_NAME }}
           aks_cluster_name: ${{ secrets.AKS_NAME }}
           acr_secret_name: ${{ secrets.ACR_SECRET_NAME }}
-          helm_chart_path: "./manifest/backend"
+          chart_name: "fontend"
+          harbor_username: ${{ secrets.HARBOR_USER }}
+          harbor_password: ${{ secrets.HARBOR_PASS }}
+          harbor_ip: ${{ secrets.HARBOR_IP }}
           
