Update CI.yaml se hace el cambio de versionado

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -11,12 +11,21 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
+      
+      - name: Set up script permissions
+        run: |
+          chmod +x ./extract_version.sh
+          chmod +x ./upload_version.sh
 
-      # - name: Usar la acción para extraer la versión
-      #   uses: ./.github/actions/extract-version
-      #   id: extract_version
-      #   with:
-      #     file: '/pom.xml'
+      - name: Extract and increment version
+        run: |
+          NEW_VERSION=$(./extract_version.sh)
+          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
+
+      - name: Upload version into file
+        run: |
+          ./upload_version.sh "$NEW_VERSION"
+
 
       # - name: Imprimir la versión extraída
       #   id: show_version
@@ -37,7 +46,7 @@ jobs:
         with:
           acr_name: ${{ secrets.ACR_NAME }}
           image_name: "myapp-frontend"
-          image_tag: "4.0.0"
+          image_tag: "${{ env.NEW_VERSION }}"
           arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
           arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
           arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
