--- a/.github/actions/deploy/action.yaml
+++ b/.github/actions/deploy/action.yaml
@@ -85,8 +85,8 @@ runs:
       run: |
         helm upgrade --install ${{inputs.chart_name}} oci://${{inputs.harbor_ip}}/${{inputs.harbor_username}}/${{inputs.chart_name}} \
           --namespace default \
-          --set "image.tag=${{ inputs.image_tag }}" \
-          --set "image.repository=jrochadev/frontend" \
+          --set "image.tag=latest" \
+          --set "image.repository=jrochadev/mi-nginx-vue-app" \
       shell: bash
           
           # --set "image.repository=${{ inputs.acr_name }}.azurecr.io/${{ inputs.image_name }}" \
