--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -1,5 +1,4 @@
-# .github/workflows/main-deploy.yaml
-name: Main Deployment Workflow
+name: CI CD Pipeline
 
 on:
   workflow_dispatch:
@@ -36,7 +35,7 @@ jobs:
       #   run: echo "La versión es: ${{ steps.extract_version.outputs.version }}"
 
       # - name: Build and Push Docker Image
-      #   uses: ./.github/actions/upload_image
+      #   uses: ./.github/actions/CI
       #   with:
       #     acr_name: ${{ secrets.ACR_NAME }}
       #     image_name: "myapp-frontend"
@@ -46,7 +45,7 @@ jobs:
       #     arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
 
       - name: Upload an image 
-        uses: ./.github/actions/deploy
+        uses: ./.github/actions/CD
         with:
           acr_name: ${{ secrets.ACR_NAME }}
           image_name: "myapp-frontend"
