--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -30,19 +30,15 @@ jobs:
         run: |
           ./upload_version.sh "$NEW_VERSION"
 
-      # - name: Imprimir la versión extraída
-      #   id: show_version
-      #   run: echo "La versión es: ${{ steps.extract_version.outputs.version }}"
-
-      # - name: Build and Push Docker Image
-      #   uses: ./.github/actions/CI
-      #   with:
-      #     acr_name: ${{ secrets.ACR_NAME }}
-      #     image_name: "myapp-frontend"
-      #     image_tag: "4.0.0"
-      #     arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
-      #     arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
-      #     arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
+      - name: Build and Push Docker Image
+        uses: ./.github/actions/CI
+        with:
+          acr_name: ${{ secrets.ACR_NAME }}
+          image_name: "myapp-frontend"
+          image_tag: "4.0.0"
+          arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
+          arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
+          arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
 
       - name: Upload an image 
         uses: ./.github/actions/CD
