Update action.yaml se añade la instalacion de azure cli

--- a/.github/actions/CI/action.yaml
+++ b/.github/actions/CI/action.yaml
@@ -28,6 +28,10 @@ runs:
   steps:
     - name: Check out code
       uses: actions/checkout@v3
+    - name: Install Azure CLI
+      run: |
+        curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+      shell: bash
     - name: Login to Azure with Service Principal
       run: |
         az login --service-principal \
