--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -1,3 +1,5 @@
+
+
 name: CI CD Pipeline
 
 on:
@@ -25,34 +27,42 @@ jobs:
         run: |
           NEW_VERSION=$(./extract_version.sh)
           echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
+          echo "::set-output name=NEW_VERSION::$NEW_VERSION"
 
       - name: Upload version into file
         run: |
           ./upload_version.sh "$NEW_VERSION"
+  call_frontend_ci:
+    needs: deploy
+    uses: stemdo-labs/final-project-exercise-javierrochadev/.github/workflows/frontend-CI.yaml@main
+    with:
+      image_tag: "${{ needs.deploy.outputs.NEW_VERSION }}" 
+      image_name: "myapp-frontend"
+    secrets:
+      acr_name: ${{ secrets.ACR_NAME }}
+      arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
+      arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
+      arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
 
-      # - name: Build and Push Docker Image
-      #   uses: ./.github/actions/CI
-      #   with:
-      #     acr_name: ${{ secrets.ACR_NAME }}
-      #     image_name: "myapp-frontend"
-      #     image_tag: "${{ env.NEW_VERSION }}"
-      #     arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
-      #     arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
-      #     arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
+  call_frontend_cd:
+    needs:
+      - deploy
+      - call_frontend_ci
+    uses: stemdo-labs/final-project-exercise-javierrochadev/.github/workflows/frontend-CD.yaml@main
+    with:
+      image_name: "myapp-frontend"
+      chart_name: "frontend"
+      image_tag: "${{ needs.deploy.outputs.NEW_VERSION }}" 
+    secrets:
+      acr_name: ${{ secrets.ACR_NAME }}
+      arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
+      arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
+      arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
+      aks_resource_group: ${{ secrets.RESOURCE_GROUP_NAME }}
+      aks_cluster_name: ${{ secrets.AKS_NAME }}
+      acr_secret_name: ${{ secrets.ACR_SECRET_NAME }}
+      harbor_username: ${{ secrets.HARBOR_USER }}
+      harbor_password: ${{ secrets.HARBOR_PASS }}
+      harbor_ip: ${{ secrets.HARBOR_IP }}
 
-      - name: Upload an image 
-        uses: ./.github/actions/CD
-        with:
-          acr_name: ${{ secrets.ACR_NAME }}
-          image_name: "myapp-frontend"
-          image_tag: "${{ env.NEW_VERSION }}"
-          arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
-          arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
-          arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
-          aks_resource_group: ${{ secrets.RESOURCE_GROUP_NAME }}
-          aks_cluster_name: ${{ secrets.AKS_NAME }}
-          acr_secret_name: ${{ secrets.ACR_SECRET_NAME }}
-          chart_name: "frontend"
-          harbor_username: ${{ secrets.HARBOR_USER }}
-          harbor_password: ${{ secrets.HARBOR_PASS }}
-          harbor_ip: ${{ secrets.HARBOR_IP }}
+     
