--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -8,6 +8,8 @@ on:
 jobs:
   deploy:
     runs-on: runner-stemdo-labs
+    outputs:
+      NEW_VERSION: ${{ steps.extract_version.outputs.NEW_VERSION }}
 
     steps:
       - name: Set up Node.js
@@ -23,11 +25,12 @@ jobs:
           chmod +x ./extract_version.sh
           chmod +x ./upload_version.sh
 
-      - name: Extract and increment version
+      - id : extract_version 
+        name: Extract and increment version
         run: |
           NEW_VERSION=$(./extract_version.sh)
           echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
-          echo "::set-output name=NEW_VERSION::$NEW_VERSION"
+          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_OUTPUT
 
       - name: Upload version into file
         run: |
