Update CI-CD.yaml se añade la ejecucion de push a main

--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -3,8 +3,10 @@
 name: CI CD Pipeline
 
 on:
+  push:
+    branches:
+      - main  
   workflow_dispatch:
-
 jobs:
   deploy:
     runs-on: runner-stemdo-labs
