se cambia el nombre de la imagen en el values

--- a/chart/custom_values.yaml
+++ b/chart/custom_values.yaml
@@ -9,7 +9,7 @@ replicaCount: 1  # Número de pods que se desplegarán para esta aplicación
 # Configuración de la imagen
 # Estos valores definen la imagen Docker que se usará para la aplicación backend
 image:
-  repository: "myacrjrochadev.azure.io/frontend-app"  # El repositorio de Docker (por ejemplo, "myrepo/myapp")
+  repository: "myacrjrochadev.azure.io/myapp-frontend"  # El repositorio de Docker (por ejemplo, "myrepo/myapp")
   tag: ""         # La etiqueta de la imagen Docker (por ejemplo, "latest", "v1.0.0")
   pullSecret: ""  # Opcional: Secreto de Kubernetes para obtener la imagen de un repositorio privado (por ejemplo, "my-secret")
 
