Update CI-CD.yaml  se añade el namespace como input

--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -57,7 +57,8 @@ jobs:
     with:
       image_name: "myapp-frontend"
       chart_name: "frontend"
-      image_tag: "${{ needs.deploy.outputs.NEW_VERSION }}" 
+      image_tag: "${{ needs.deploy.outputs.NEW_VERSION }}"
+      namespace: "${{ vars.NAMESPACE}}"
     secrets:
       acr_name: ${{ secrets.ACR_NAME }}
       arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
