--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -9,15 +9,16 @@ on:
   workflow_dispatch:
 jobs:
   deploy:
-    runs-on: runner-stemdo-labs
+    # runs-on: runner-stemdo-labs
+    runs-on: ubuntu-latest
     outputs:
       NEW_VERSION: ${{ steps.extract_version.outputs.NEW_VERSION }}
 
     steps:
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
+      #- name: Set up Node.js
+      #  uses: actions/setup-node@v4
+      #  with:
+      #    node-version: '20'
 
       - name: Check out repository
         uses: actions/checkout@v3
