Update CI-CD.yaml se añade el subcription id

--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -65,6 +65,7 @@ jobs:
       arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
       arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
       arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
+      arm_subscription_id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       aks_resource_group: ${{ secrets.RESOURCE_GROUP_NAME }}
       aks_cluster_name: ${{ secrets.AKS_NAME }}
       acr_secret_name: ${{ secrets.ACR_SECRET_NAME }}
