--- a/chart/custom_values.yaml
+++ b/chart/custom_values.yaml
@@ -31,7 +31,7 @@ autoscaling:
 probes:
   readinessProbe:
     httpGet:
-      path: /""  # El endpoint HTTP que Kubernetes consultará para verificar si la aplicación está saludable
+      path: ""  # El endpoint HTTP que Kubernetes consultará para verificar si la aplicación está saludable
       port: ""       # El puerto en el que está disponible el endpoint de salud
     initialDelaySeconds: ""  # Tiempo de espera antes de hacer la primera comprobación de salud después de que el contenedor se inicie (en segundos)
     periodSeconds: ""         # Intervalo entre cada comprobación de salud subsecuente (en segundos)
