se quitan las comillas en valores numericos

--- a/chart/custom_values.yaml
+++ b/chart/custom_values.yaml
@@ -22,9 +22,9 @@ acr:
 # Esto habilita y configura el escalado horizontal de pods en función del uso de CPU
 autoscaling:
    enabled: true  # Habilita o deshabilita el escalado automático (true/false)
-   minReplicas: "2"  # Número mínimo de réplicas para la aplicación (en caso de bajo tráfico)
-   maxReplicas: "10"  # Número máximo de réplicas para la aplicación (en caso de alto tráfico)
-   targetCPUUtilizationPercentage: "60"  # El porcentaje de uso de CPU objetivo para escalar (por ejemplo, escalar si el uso supera el 60%)
+   minReplicas: 2  # Número mínimo de réplicas para la aplicación (en caso de bajo tráfico)
+   maxReplicas: 10  # Número máximo de réplicas para la aplicación (en caso de alto tráfico)
+   targetCPUUtilizationPercentage: 60  # El porcentaje de uso de CPU objetivo para escalar (por ejemplo, escalar si el uso supera el 60%)
 
 # Sondeos para comprobar la salud de la aplicación
 # El readinessProbe verifica si la aplicación está lista para recibir tráfico
