--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -43,8 +43,7 @@ jobs:
 
       - name: do testing
         run: |
-          npm run example.spec.js
-        working-directory: ./tests/unit
+          npm run test:unit 
     
   call_frontend_ci:
     needs: 
