--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -40,8 +40,16 @@ jobs:
 
       - name: Check out repository
         uses: actions/checkout@v3
-
       
+      - name: Install package and dependencies
+        run: |
+          apt install npm -y 
+          npm install --save-dev @vue/cli-service
+
+      - name: Do testing on component
+        run: |
+          npm run test:unit
+
     
   call_frontend_ci:
     needs: 
