--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -32,7 +32,6 @@ jobs:
       - name: Upload version into file
         run: |
           ./upload_version.sh "$NEW_VERSION"
-
   # testing:
   #   runs-on: ubuntu-latest
   #   needs:
@@ -73,7 +72,7 @@ jobs:
     uses: stemdo-labs/final-project-exercise-javierrochadev/.github/workflows/frontend-CD.yaml@main
     with:
       image_name: "myapp-frontend"
-      chart_name: "frontend-app"
+      chart_name: "frontend"
       image_tag: "${{ needs.extract_version.outputs.NEW_VERSION }}" 
       namespace: "${{ vars.NAMESPACE }}"
     secrets:
