cambios en el conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -36,8 +36,8 @@ http {
         server_name localhost;
     
         # Configurar certificados SSL/TLS
-        ssl_certificate /path/to/cert/tls.crt;  # Ruta al certificado público
-        ssl_certificate_key /path/to/cert/tls.key;  # Ruta a la clave privada
+        ssl_certificate /etc/certs/tls.crt;  # Ruta al certificado público
+        ssl_certificate_key /etc/certs/tls.key;  # Ruta a la clave privada
     
         # Configuración SSL recomendada
         ssl_protocols TLSv1.2 TLSv1.3;
