--- a/nginx.conf
+++ b/nginx.conf
@@ -24,25 +24,28 @@ http {
     keepalive_timeout  65;
 
     # Configuración para redirigir las rutas de la API al backend
+    # server {
+    #     listen 80;
+    #     server_name localhost;
+# 
+    #     # Redirigir todo el tráfico HTTP a HTTPS
+    #     # return 301 https://$host$request_uri;
+    # }
     server {
-        listen 80;
-        server_name localhost;
+        # listen 443 ssl;
+        # server_name localhost;
 
-        # Redirigir todo el tráfico HTTP a HTTPS
-        return 301 https://$host$request_uri;
-    }
-    server {
-        listen 443 ssl;
+        listen 80;
         server_name localhost;
     
         # Configurar certificados SSL/TLS
-        ssl_certificate /etc/ssl/certs/tls.crt;  # Ruta al certificado público
-        ssl_certificate_key /etc/ssl/certs/tls.key;  # Ruta a la clave privada
-    
-        # Configuración SSL recomendada
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_prefer_server_ciphers on;
-        ssl_ciphers HIGH:!aNULL:!MD5;
+        # ssl_certificate /etc/ssl/certs/tls.crt;  # Ruta al certificado público
+        # ssl_certificate_key /etc/ssl/certs/tls.key;  # Ruta a la clave privada
+    # 
+        # # Configuración SSL recomendada
+        # ssl_protocols TLSv1.2 TLSv1.3;
+        # ssl_prefer_server_ciphers on;
+        # ssl_ciphers HIGH:!aNULL:!MD5;
 
         # Redirigir todas las rutas que comienzan con /api/ al backend
         location /api/ {
