--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -32,23 +32,21 @@ jobs:
       - name: Upload version into file
         run: |
           ./upload_version.sh "$NEW_VERSION"
-  # testing:
-  #   runs-on: ubuntu-latest
-  #   needs:
-  #     - extract_version
-  #   steps: 
-# 
-  #     - name: Check out repository
-  #       uses: actions/checkout@v3
-  #     
-  #     - name: Install package and dependencies
-  #       run: |
-  #         apt install npm -y 
-  #         npm install --save-dev @vue/cli-service
-# 
-  #     - name: Do testing on component
-  #       run: |
-  #         npm run test:unit
+  testing:
+    runs-on: ubuntu-latest
+    needs:
+      - extract_version
+    steps:
+     - name: Checkout repository
+       uses: actions/checkout@v3
+       
+     - name: Set up JDK 17
+       uses: actions/setup-java@v3
+       with:
+         java-version: 17
+         distribution: 'temurin'
+     - name: Run Maven tests
+       run: mvn clean test
 
     
   # call_frontend_ci:
@@ -65,27 +63,27 @@ jobs:
   #     arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
   #     arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
 
-  call_frontend_cd:
-    needs:
-      - extract_version
-      # - call_frontend_ci
-    uses: stemdo-labs/final-project-exercise-javierrochadev/.github/workflows/frontend-CD.yaml@main
-    with:
-      image_name: "myapp-frontend"
-      chart_name: "frontend"
-      image_tag: "${{ needs.extract_version.outputs.NEW_VERSION }}" 
-      namespace: "${{ vars.NAMESPACE }}"
-    secrets:
-      acr_name: ${{ secrets.ACR_NAME }}
-      arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
-      arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
-      arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
-      arm_subscription_id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-      aks_resource_group: ${{ secrets.RESOURCE_GROUP_NAME }}
-      aks_cluster_name: ${{ secrets.AKS_NAME }}
-      acr_secret_name: ${{ secrets.ACR_SECRET_NAME }}
-      harbor_username: ${{ secrets.HARBOR_USER }}
-      harbor_password: ${{ secrets.HARBOR_PASS }}
-      harbor_ip: ${{ secrets.HARBOR_IP }}
+  # call_frontend_cd:
+  #   needs:
+  #     - extract_version
+  #     - call_frontend_ci
+  #   uses: stemdo-labs/final-project-exercise-javierrochadev/.github/workflows/frontend-CD.yaml@main
+  #   with:
+  #     image_name: "myapp-frontend"
+  #     chart_name: "frontend"
+  #     image_tag: "${{ needs.extract_version.outputs.NEW_VERSION }}" 
+  #     namespace: "${{ vars.NAMESPACE }}"
+  #   secrets:
+  #     acr_name: ${{ secrets.ACR_NAME }}
+  #     arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
+  #     arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
+  #     arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
+  #     arm_subscription_id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+  #     aks_resource_group: ${{ secrets.RESOURCE_GROUP_NAME }}
+  #     aks_cluster_name: ${{ secrets.AKS_NAME }}
+  #     acr_secret_name: ${{ secrets.ACR_SECRET_NAME }}
+  #     harbor_username: ${{ secrets.HARBOR_USER }}
+  #     harbor_password: ${{ secrets.HARBOR_PASS }}
+  #     harbor_ip: ${{ secrets.HARBOR_IP }}
 
      
