--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -73,7 +73,7 @@ jobs:
     with:
       image_name: "myapp-frontend"
       chart_name: "frontend"
-      release_name: ${{ github.ref == 'refs/heads/main' && 'frontend' || 'dev-frontend' }}
+      release_env: ${{ github.ref == 'refs/heads/main' && 'pro' || 'dev' }}
       image_tag: "${{ needs.extract_version.outputs.NEW_VERSION }}" 
       namespace: "${{ vars.NAMESPACE }}"
     secrets:
