--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -60,6 +60,7 @@ jobs:
       image_tag: "${{ needs.extract_version.outputs.NEW_VERSION }}" 
       image_name: "myapp-frontend"
       release_env: ${{ github.ref == 'refs/heads/main' && 'pro' || 'dev' }}
+      release_name: "frontend"
     secrets:
       acr_name: ${{ secrets.ACR_NAME }}
       arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
@@ -69,7 +70,7 @@ jobs:
   call_frontend_cd:
     needs:
       - extract_version
-      # - call_frontend_ci
+      - call_frontend_ci
     uses: stemdo-labs/final-project-exercise-javierrochadev/.github/workflows/frontend-CD.yaml@main
     with:
       image_name: "myapp-frontend"
