--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -54,7 +54,7 @@ jobs:
   call_frontend_ci:
     needs: 
       - extract_version
-      - testing
+      # - testing
     uses: stemdo-labs/final-project-exercise-javierrochadev/.github/workflows/frontend-CI.yaml@main
     with:
       image_tag: "${{ needs.extract_version.outputs.NEW_VERSION }}" 
