--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -76,6 +76,7 @@ jobs:
       image_name: "myapp-frontend"
       chart_name: "frontend"
       release_env: ${{ github.ref == 'refs/heads/main' && 'pro' || 'dev' }}
+      release_name: "frontend"
       image_tag: "${{ needs.extract_version.outputs.NEW_VERSION }}" 
       namespace: "${{ vars.NAMESPACE }}"
     secrets:
